# deckcast

./: .gitignore  CHANGELOG.md  GUIDE.md  README.md  pyproject.toml  requirements.txt
.github/: smoke.yaml
.github/workflows/: ci.yml
deckcast/: __init__.py  author.py  cli.py  config.py  export.py  frames.py  images.py  llm.py  pipeline.py  tts.py  util.py  video.py
deckcast/templates/: slide.html
examples/: autonomous.yaml  quickstart.yaml
tests/: conftest.py  test_author.py  test_config.py  test_export.py  test_pipeline.py
