[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "deckcast"
version = "0.1.0"
description = "Config-driven narrated-video builder for slide decks. LLM-agnostic, free image/voice backends."
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["edge-tts>=6.1", "PyYAML>=6.0"]

[project.optional-dependencies]
export = ["python-pptx>=0.6.21"]   # only needed for `--formats pptx` (html export is stdlib-only)

[project.scripts]
deckcast = "deckcast.cli:main"

[tool.setuptools]
packages = ["deckcast"]

[tool.setuptools.package-data]
deckcast = ["templates/*.html"]
